@@ -3,12 +3,12 @@
              "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd"
 [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appversion "2.6">
-  <!ENTITY manrevision "2.6">
-  <!ENTITY date "March 2002">
+  <!ENTITY appversion "2.8">
+  <!ENTITY manrevision "2.8">
+  <!ENTITY date "September 2004">
   <!ENTITY app "<application>Glines</application>">
   <!ENTITY appname "Glines">
-  <!ENTITY version "2.6">
+  <!ENTITY version "2.8">
 ]>
 <!-- 
       (Do not remove this comment block.)
