@@ -1,3 +1,7 @@
+2004-09-09  callum  <callum@spooky-possum.org>
+
+	* help/C/glines.xml: Bumped the version number.
+
 2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* classic.png:
